# KYUN-Pipe

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
competitions/01_spaceship_titanic/: README.md  baseline_script.py  kernel-metadata.json  main.py  steps.py
competitions/02_store_sales/: 02-store-sales.ipynb  baseline_script.py  kernel-metadata.json  main.py
competitions/c01_spaceship_titanic/: baseline_script.py  main.py
competitions/c02_store_sales/: README.md  baseline_script.py  main.py
competitions/c02_store_sales/results/: REPORT.md  result.csv
competitions/c03_house_prices/: EDA_research.ipynb  README.md  baseline_script.py  kernel-metadata.json  main.py
competitions/c03_house_prices/results/: EDA.md  Experiment_Report.md
competitions/c03_house_prices/results/20260209-214359/: metadata.json  metrics.json
competitions/c04_etlpipeline/: kernel-metadata.json  main.py
core/: DataLoader.py  Evaluator.py  Preprocessor.py  Reporter.py  Trainer.py  Transformers.py  dataset-metadata.json
