[project]
name = "kyun-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=1.8.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.1",
    "nbstripout>=0.8.2",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
