[project]
name = "kyun-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=1.8.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.1",
    "nbstripout>=0.8.2",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
# 검사 대상에 노트북 포함
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# 코드 품질을 위한 권장 규칙셋 (에러, Pyflakes, Isort, 명명규칙)
select = ["E", "F", "I", "N", "UP"]
